--- a/ums/dms-ums-pay/pom.xml
+++ b/ums/dms-ums-pay/pom.xml
@@ -1,27 +1,42 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.dms</groupId>
-    <artifactId>dms-ums</artifactId>
-    <version>0.0.1</version>
-  </parent>
-  <groupId>com.dms</groupId>
-  <artifactId>dms-ums-pay</artifactId>
-  <version>0.0.1</version>
-  <packaging>war</packaging>
-  <name>dms-ums-pay Maven Webapp</name>
-  <url>http://maven.apache.org</url>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-  <build>
-    <finalName>dms-ums-pay</finalName>
-  </build>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+
+
+	<parent>
+		<groupId>com.dms</groupId>
+		<artifactId>dms-ums</artifactId>
+		<version>0.0.1</version>
+	</parent>
+
+
+	<groupId>com.dms</groupId>
+	<artifactId>dms-ums-pay</artifactId>
+	<version>0.0.1</version>
+	<packaging>war</packaging>
+	<name>dms-ums-pay Maven Webapp</name>
+	<url>http://maven.apache.org</url>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+		</dependency>
+
+	</dependencies>
+
+
+
+
+	<build>
+		<finalName>dms-ums-pay</finalName>
+	</build>
 </project>
